@@ -8,7 +8,7 @@ PHP                                                                        NEWS
 - Changed phpize not to require libtool. (Jani)
 - Fixed a bug in mysql_affected_rows and mysql_stmt_affected_rows when the
   api function returns -1 (Georg)
-- Fixed several egregious leaks in ext/browscap and sapi/embed. (Andrei)
+- Fixed several leaks in ext/browscap and sapi/embed. (Andrei)
 - Fixed several leaks in ext/filepro. (Tony)
 - Fixed build system to always use bundled libtool files. (Jani)
 - Fixed a bug in mysqli_stmt_execute() (type conversion with NULL values). (Georg)
@@ -69,7 +69,8 @@ PHP                                                                        NEWS
 - Fixed bug #31139 (XML Parser Functions seem to drop &amp; when parsing). (Rob)
 - Fixed bug #31398 (When magic_guotes_gpc are enabled filenames with ' get cutoff).
   (Ilia)
-- Fixed bug #31111 (Compile failure of zend_strtod.c). (Derick)
+- Fixed bug #31107, #31110, #31111, #31249 (Compile failure of zend_strtod.c).
+  (Jani)
 - Fixed bug #31110 (PHP 4.3.10 does not compile on Tru64 UNIX 5.1B). (Derick)
 - Fixed bug #31107 (Compile failure on Solaris 9 (Intel) and gcc 3.4.3). (Derick)
 - Fixed bug #31103 (Better error message when c-client cannot be found). (Ilia)
